--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Trabajo Practico Unidad 4 - Modulo 3 de la  Diplomatura en programación web full stack con React JS",
   "main": "app.js",
-  "scripts": {
+  "scripts": "node app.js{
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
