--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Trabajo Practico Unidad 4 - Modulo 3 de la  Diplomatura en programación web full stack con React JS",
   "main": "app.js",
-  "scripts": "node app.js{
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
